{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 97,
  "lineage": "ee97f752-2384-a730-b8d3-ef97c7bc148f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "support_preprod_vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00b6c3164f9e127cd",
            "peer_owner_id": "609291635675",
            "peer_region": "eu-west-1",
            "peer_vpc_id": "vpc-08e15d10d160a036b",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags_all": {
              "owner": "lucas.campistron@fr.clara.net"
            },
            "vpc_id": "vpc-0990965a9663c2886"
          },
          "dependencies": [
            "module.preprod_vpc.aws_vpc.vpc",
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:internet-gateway/igw-0e0811a0cd6e5efc9",
            "id": "igw-0e0811a0cd6e5efc9",
            "owner_id": "609291635675",
            "tags": {
              "Name": "preprod-vpc-internet-gateway"
            },
            "tags_all": {
              "Name": "preprod-vpc-internet-gateway",
              "owner": "lucas.campistron@fr.clara.net"
            },
            "vpc_id": "vpc-0990965a9663c2886"
          },
          "dependencies": [
            "module.preprod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e2e7b417652d08c",
            "original_route_table_id": "rtb-06f32d4d92f4d4081",
            "route_table_id": "rtb-03777e2997c534f8f",
            "vpc_id": "vpc-0990965a9663c2886"
          },
          "dependencies": [
            "module.preprod_vpc.aws_route_table.vpc_public_route_table",
            "module.preprod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "peering_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03777e2997c534f8f3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03777e2997c534f8f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00b6c3164f9e127cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.support_preprod_vpc_peering",
            "module.preprod_vpc.aws_route_table.vpc_public_route_table",
            "module.preprod_vpc.aws_vpc.vpc",
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e0811a0cd6e5efc9",
            "id": "r-rtb-03777e2997c534f8f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03777e2997c534f8f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.preprod_vpc.aws_internet_gateway.vpc_ig",
            "module.preprod_vpc.aws_route_table.vpc_public_route_table",
            "module.preprod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:route-table/rtb-04c9127bcba8e41e7",
            "id": "rtb-04c9127bcba8e41e7",
            "owner_id": "609291635675",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "preprod-private-route-table"
            },
            "tags_all": {
              "Name": "preprod-private-route-table",
              "owner": "lucas.campistron@fr.clara.net"
            },
            "timeouts": null,
            "vpc_id": "vpc-0990965a9663c2886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.preprod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:route-table/rtb-03777e2997c534f8f",
            "id": "rtb-03777e2997c534f8f",
            "owner_id": "609291635675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0811a0cd6e5efc9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0b8b736dba90c9db5"
              }
            ],
            "tags": {
              "Name": "preprod-public-route-table"
            },
            "tags_all": {
              "Name": "preprod-public-route-table",
              "owner": "lucas.campistron@fr.clara.net"
            },
            "timeouts": null,
            "vpc_id": "vpc-0990965a9663c2886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.preprod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:security-group/sg-0ac02b2841733fd5a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac02b2841733fd5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "preprod_main_sg",
            "name_prefix": "",
            "owner_id": "609291635675",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "owner": "lucas.campistron@fr.clara.net"
            },
            "timeouts": null,
            "vpc_id": "vpc-0990965a9663c2886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.preprod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:subnet/subnet-053fd779343273674",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053fd779343273674",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "609291635675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-private-subnet"
            },
            "tags_all": {
              "Name": "preprod-private-subnet",
              "owner": "lucas.campistron@fr.clara.net"
            },
            "vpc_id": "vpc-0990965a9663c2886"
          },
          "dependencies": [
            "module.preprod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:subnet/subnet-019e46f7316ccc095",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019e46f7316ccc095",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "609291635675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "preprod-public-subnet"
            },
            "tags_all": {
              "Name": "preprod-public-subnet",
              "owner": "lucas.campistron@fr.clara.net"
            },
            "vpc_id": "vpc-0990965a9663c2886"
          },
          "dependencies": [
            "module.preprod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.preprod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:vpc/vpc-0990965a9663c2886",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05ca305b9231e0f32",
            "default_route_table_id": "rtb-03777e2997c534f8f",
            "default_security_group_id": "sg-0c1248001a704886c",
            "dhcp_options_id": "dopt-40fed526",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0990965a9663c2886",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03777e2997c534f8f",
            "owner_id": "609291635675",
            "tags": {
              "Name": "preprod-vpc"
            },
            "tags_all": {
              "Name": "preprod-vpc",
              "owner": "lucas.campistron@fr.clara.net"
            }
          }
        }
      ]
    },
    {
      "module": "module.support_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:internet-gateway/igw-0951170c0f0abe081",
            "id": "igw-0951170c0f0abe081",
            "owner_id": "609291635675",
            "tags": {
              "Name": "support-vpc-internet-gateway"
            },
            "tags_all": {
              "Name": "support-vpc-internet-gateway",
              "owner": "lucas.campistron@fr.clara.net"
            },
            "vpc_id": "vpc-08e15d10d160a036b"
          },
          "dependencies": [
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.support_vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098114fb317d96034",
            "original_route_table_id": "rtb-07218718abf2f066e",
            "route_table_id": "rtb-0e92f3b6449c6fe58",
            "vpc_id": "vpc-08e15d10d160a036b"
          },
          "dependencies": [
            "module.support_vpc.aws_route_table.vpc_public_route_table",
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.support_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "peering_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e92f3b6449c6fe583322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e92f3b6449c6fe58",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00b6c3164f9e127cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.support_preprod_vpc_peering",
            "module.preprod_vpc.aws_vpc.vpc",
            "module.support_vpc.aws_route_table.vpc_public_route_table",
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.support_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0951170c0f0abe081",
            "id": "r-rtb-0e92f3b6449c6fe581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e92f3b6449c6fe58",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.support_vpc.aws_internet_gateway.vpc_ig",
            "module.support_vpc.aws_route_table.vpc_public_route_table",
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.support_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:route-table/rtb-0e92f3b6449c6fe58",
            "id": "rtb-0e92f3b6449c6fe58",
            "owner_id": "609291635675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0951170c0f0abe081",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0b8b736dba90c9db5"
              }
            ],
            "tags": {
              "Name": "support-public-route-table"
            },
            "tags_all": {
              "Name": "support-public-route-table",
              "owner": "lucas.campistron@fr.clara.net"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e15d10d160a036b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.support_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:security-group/sg-06a35ca0e9a78cd91",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a35ca0e9a78cd91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "support_main_sg",
            "name_prefix": "",
            "owner_id": "609291635675",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "owner": "lucas.campistron@fr.clara.net"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e15d10d160a036b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.support_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:subnet/subnet-0ed9899e28668727c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed9899e28668727c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "609291635675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "support-public-subnet"
            },
            "tags_all": {
              "Name": "support-public-subnet",
              "owner": "lucas.campistron@fr.clara.net"
            },
            "vpc_id": "vpc-08e15d10d160a036b"
          },
          "dependencies": [
            "module.support_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.support_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:609291635675:vpc/vpc-08e15d10d160a036b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00a12017d7afb5373",
            "default_route_table_id": "rtb-0e92f3b6449c6fe58",
            "default_security_group_id": "sg-00250c52597b1cbf9",
            "dhcp_options_id": "dopt-40fed526",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08e15d10d160a036b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e92f3b6449c6fe58",
            "owner_id": "609291635675",
            "tags": {
              "Name": "support-vpc"
            },
            "tags_all": {
              "Name": "support-vpc",
              "owner": "lucas.campistron@fr.clara.net"
            }
          }
        }
      ]
    }
  ]
}